--- a/_includes/neighbors.html
+++ b/_includes/neighbors.html
@@ -1,55 +1,140 @@
 <div class="neighbors-container" id="neighbors_ticker">
     <div class="ticker">
         <div class="item">
-            neighbors
+            <span class="eng lang-text active">
+                neighbors
+            </span>
+            <span class="span lang-text">
+                vecinos
+            </span>
         </div>
         <div class="item">
-            helping
+            <span class="eng lang-text active">
+                helping
+            </span>
+            <span class="span lang-text">
+                ayudando a
+            </span>
         </div>
         <div class="item">
-            neighbors
+            <span class="eng lang-text active">
+                neighbors
+            </span>
+            <span class="span lang-text">
+                vecinos
+            </span>
         </div>
         <div class="item">
-            helping
+            <span class="eng lang-text active">
+                helping
+            </span>
+            <span class="span lang-text">
+                ayudando a
+            </span>
         </div>
         <div class="item">
-            neighbors
+            <span class="eng lang-text active">
+                neighbors
+            </span>
+            <span class="span lang-text">
+                vecinos
+            </span>
         </div>
         <div class="item">
-            helping
+            <span class="eng lang-text active">
+                helping
+            </span>
+            <span class="span lang-text">
+                ayudando a
+            </span>
         </div>
         <div class="item">
-            neighbors
+            <span class="eng lang-text active">
+                neighbors
+            </span>
+            <span class="span lang-text">
+                vecinos
+            </span>
         </div>
         <div class="item">
-            helping
+            <span class="eng lang-text active">
+                helping
+            </span>
+            <span class="span lang-text">
+                ayudando a
+            </span>
         </div>
         <div class="item">
-            neighbors
+            <span class="eng lang-text active">
+                neighbors
+            </span>
+            <span class="span lang-text">
+                vecinos
+            </span>
         </div>
         <div class="item">
-            helping
+            <span class="eng lang-text active">
+                helping
+            </span>
+            <span class="span lang-text">
+                ayudando a
+            </span>
         </div>
         <div class="item">
-            neighbors
+            <span class="eng lang-text active">
+                neighbors
+            </span>
+            <span class="span lang-text">
+                vecinos
+            </span>
         </div>
         <div class="item">
-            helping
+            <span class="eng lang-text active">
+                helping
+            </span>
+            <span class="span lang-text">
+                ayudando a
+            </span>
         </div>
         <div class="item">
-            neighbors
+            <span class="eng lang-text active">
+                neighbors
+            </span>
+            <span class="span lang-text">
+                vecinos
+            </span>
         </div>
         <div class="item">
-            helping
+            <span class="eng lang-text active">
+                helping
+            </span>
+            <span class="span lang-text">
+                ayudando a
+            </span>
         </div>
         <div class="item">
-            neighbors
+            <span class="eng lang-text active">
+                neighbors
+            </span>
+            <span class="span lang-text">
+                vecinos
+            </span>
         </div>
         <div class="item">
-            helping
+            <span class="eng lang-text active">
+                helping
+            </span>
+            <span class="span lang-text">
+                ayudando a
+            </span>
         </div>
         <div class="item">
-            neighbors
+            <span class="eng lang-text active">
+                neighbors
+            </span>
+            <span class="span lang-text">
+                vecinos
+            </span>
         </div>
     </div>
 </div>
