--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,14 +28,18 @@ layout: default
 						<a href="https://opencollective.com/bushwick-ayuda-mutua" class="nav-link" id="donate_btn">Donate</a>
 					</li>
 				</ul>
+
+				<div class="mobile-nav-footer">
+					<span>Facebook</span>
+				</div>
 			</div>
 			<div class="right-btn-container">
 				<div class="eng-span-container">
 					<div class="eng lang-btn active">
-						EN
+						<span>EN</span>
 					</div>
 					<div class="span lang-btn">
-						ES
+						<span>ES</span>
 					</div>
 				</div>
 				<button id="collapse_btn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
