--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -19,6 +19,10 @@ $bam-orange: #FF6E2E;
 .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
 	background: #000 !important;
 }
+.owl-carousel .owl-stage {
+	display: flex;
+	align-items: center;
+}
 
 .min-height-100 {
 	min-height: 100vh;
@@ -35,21 +39,23 @@ $bam-orange: #FF6E2E;
 
 	display: flex;
 
-	span:first-child {
+	span {
 		margin-right: 10px;
-	}
-
-	&:hover {
-		cursor: pointer;
 	}
 
 	a {
 		color: black;
 
 		&:hover {
+			cursor: pointer;
 			text-decoration: underline;
-			color: black !important;
+			color: $bam-orange;
 		}
+	}
+
+	.arrow-img {
+		width: 18px;
+		height: 28px;
 	}
 }
 
@@ -251,7 +257,7 @@ nav {
 		
 		transition: height .5s;
 
-		@media only screen and (max-width: 375px) {
+		@media only screen and (max-width: 576px) {
 			margin-left: -17px;
 		}
 	}
@@ -269,11 +275,11 @@ nav {
 
 	ul {
 		width: 58%;
-		@media only screen and (min-width: 376px) {
+		@media only screen and (min-width: 577px) {
 			justify-content: space-between;
 		}
 
-		@media only screen and (max-width: 375px) {
+		@media only screen and (max-width: 576px) {
 			width: 100%;
 			background-color: black;
 			position: fixed;
@@ -289,21 +295,25 @@ nav {
 			left: 314px;
 			top: 35px;
 
-			@media only screen and (min-width: 376px) {
+			@media only screen and (min-width: 577px) {
 				display: none;
 			}
 		}
 
 		li {
+			@media only screen and (max-width: 576px) {
+				margin-bottom: 50px;
+			}
 
 			a {
 				border-bottom: none !important;
 				color: black !important;
 				font-size: 18px;
 
-				@media only screen and (max-width: 375px) {
+				@media only screen and (max-width: 576px) {
 					color: white !important;
-					font-size: 56px;
+					font-size: 48px;
+					line-height: 56px;
 				}
 
 				&:hover,
@@ -320,7 +330,7 @@ nav {
 	}
 	
 	.eng-span-container {
-		@media only screen and (max-width: 375px) {
+		@media only screen and (max-width: 576px) {
 			margin-right: 30px;
 		}
 
@@ -335,6 +345,8 @@ nav {
 			border: 3px solid black;
 			border-radius: 50%;
 			opacity: .2;
+			display: flex;
+    		align-items: center;
 
 			&:first-child {
 				margin-right: 5px;
@@ -349,6 +361,12 @@ nav {
 				background-color: black;
 				opacity: 1;
 			}
+		}
+	}
+
+	.mobile-nav-footer {
+		@media only screen and (min-width: 577px) {
+			display: none;
 		}
 	}
 }
@@ -378,6 +396,16 @@ nav {
 	}
 
 	.subtitle {
+		width: 94%;
+		font-size: 26px;
+
+		@media only screen and (min-width: 1024px) {
+			font-size: 32px;
+			width: 77%;
+		}
+	}
+
+	.text {
 		width: 94%;
 		font-size: 18px;
 
@@ -494,7 +522,7 @@ nav {
 		line-height: 36px;
 
 		@media only screen and (min-width: 577px) {
-			font-size: 34px;
+			font-size: 28px;
 			line-height: 46px;
 		}
 
@@ -546,6 +574,26 @@ nav {
 
 .requests {
 	margin-top: 165px;
+	position: relative;
+
+	#hands_mobile {
+		position: absolute;
+		top: 586px;
+		left: 176px;
+		
+		@media only screen and (min-width: 576px) {
+			display: none;
+		}
+	}
+
+	#hands_desktop {
+		display: none;
+		position: absolute;
+
+		@media only screen and (min-width: 576px) {
+			display: block;
+		}
+	}
 }
 .request {
 	display: flex;
@@ -610,6 +658,17 @@ nav {
 		.underline {
 			border-bottom: 8px solid $bam-orange;
 		}
+		
+		a {
+			color: #212529;
+			text-decoration: none;
+
+			&:hover {
+				text-decoration: none !important;
+				color: $bam-orange;
+				cursor: pointer;
+			}
+		}
 	}
 
 	.text {
@@ -657,7 +716,6 @@ nav {
 
 		&:hover {
 			text-decoration: none;
-			color: black;
 		}
 	}
 
@@ -703,19 +761,12 @@ nav {
 
 		transition: background .5s;
 
-		a {
-			color: white;
-			&:hover {
-				color: black;
-			}
-		}
-
 		&:hover {
 			cursor: pointer;
 			background: white;
 
 			a {
-				color: black;
+				color: $bam-orange;
 			}
 		}
 	}
@@ -774,6 +825,7 @@ nav {
 
 			&:hover {
 				cursor: pointer;
+				color: $bam-orange;
 			}
 
 			&:not(:first-child) {
@@ -879,10 +931,6 @@ nav {
 	.connect {
 		position: relative;
 
-		@media only screen and (min-width: 1024px) {
-			padding-left: 92px;
-		}
-
 		.connect-text {
 			font-size: 24px;
 			line-height: 38px;
@@ -900,13 +948,14 @@ nav {
 
 	#connect_img {
 		position: absolute;
-		left: 0;
-		top: 1000px;
-		width: 111px;
+		left: 276px;
+		top: 925px;
+		width: 91px;
 
 		@media only screen and (min-width: 1024px) {
-			left: 0;
+			left: -30px;
 			top: 1000px;
+			width: 111px;
 		}
 	}
 }
@@ -953,22 +1002,54 @@ nav {
 		}
 	}
 
-	.plus-img {
-		width: 17px;
-
-		@media only screen and (min-width: 1024px) {
-			width: 28px;
+	a {
+		&:hover {
+			color: $bam-orange;
 		}
 	}
+
+	// .plus-img {
+	// 	width: 17px;
+	// 	height: 17px;
+
+	// 	@media only screen and (min-width: 1024px) {
+	// 		width: 28px;
+	// 		height: 28px;
+	// 	}
+	// }
 
 	.head {
 		width: 100%;
 		justify-content: space-between;
+		align-items: center;
 		
 		img {
 			&:hover {
 				cursor: pointer;
 			}
+		}
+	}
+
+	.toggle-icon {
+		width: 17px;
+		height: 17px;
+		background-image: url('../assets/images/minus.svg');
+		background-repeat: no-repeat;
+		background-size: 17px 17px;
+
+		@media only screen and (min-width: 1024px) {
+			width: 28px;
+			height: 28px;
+			background-size: 28px 28px;
+		}
+
+		&.collapsed {
+			background-image: url('../assets/images/plus.svg');
+			background-repeat: no-repeat;
+		}
+
+		&:hover {
+			cursor: pointer;
 		}
 	}
 }
