--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -356,6 +356,9 @@ nav {
 		font-family: grifter-bold;
 
 		.lang-btn {
+			width: 50px;
+			height: 50px;
+			
 			padding: 10px;
 			text-transform: uppercase;
 			border: 3px solid black;
