--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: default
 		<nav class="navbar navbar-expand-lg sticky-top">
 			<a href="/" id="logo_container">
 				<img id="logo_main" class="nav-logo active" src="assets/images/BAM.svg">
-				<!-- <img id="logo_hands" class="nav-logo hands" src="assets/images/logo_hands.svg"> -->
+				<img id="logo_hands" class="nav-logo hands" src="assets/images/logo_hands.svg">
 			</a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav m-auto">
