adding final spanish

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,16 +15,28 @@ layout: default
 				<ul class="navbar-nav m-auto">
 					<img class="close-btn" src="./assets/images/close.svg" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<li class="nav-item active">
-						  <a class="nav-link" href="/about">About</a>
+						<a class="nav-link" href="/about">
+							<span class="lang-text eng active">About</span>
+							<span class="lang-text span">Sobre Nosotros</span>
+						</a>
 					</li>
 					<li class="nav-item">
-						<a target="_blank" href="https://bit.ly/BAM-sign-up" class="nav-link">Volunteer</a>
+						<a target="_blank" href="https://bit.ly/BAM-sign-up" class="nav-link">
+							<span class="lang-text eng active">Volunteer</span>
+							<span class="lang-text span">Voluntariado</span>
+						</a>
 					</li>
 					<li class="nav-item">
-						<a target="_blank" href="https://bit.ly/BAMrequest" class="nav-link" id="assistance_btn">Request Assistance</a>
+						<a target="_blank" href="https://bit.ly/BAMrequest" class="nav-link" id="assistance_btn">
+							<span class="lang-text eng active">Request Assistance</span>
+							<span class="lang-text span">Solicite Asistencia</span>
+						</a>
 					</li>
 					<li class="nav-item">
-						<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="nav-link" id="donate_btn">Donate</a>
+						<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="nav-link" id="donate_btn">
+							<span class="lang-text eng active">Donate</span>
+							<span class="lang-text span">Donar</span>
+						</a>
 					</li>
 				</ul>
 
