copy changes Dec 30

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@ layout: default
 					<li class="nav-item active">
 						<a class="nav-link" href="/about">
 							<span class="lang-text eng active">About</span>
-							<span class="lang-text span">Sobre Nosotros</span>
+							<span class="lang-text span">Sobre Nosotres</span>
 						</a>
 					</li>
 					<li class="nav-item">
