adding donate Item button to nav and footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,23 @@ layout: default
 						</a>
 					</li>
 					<li class="nav-item">
-						<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="nav-link" id="donate_btn">
-							<span class="lang-text eng active">Donate</span>
-							<span class="lang-text span">Donar</span>
-						</a>
+						<div class="nav-dropdown">
+							<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="nav-link" id="donate_btn">
+								<span class="lang-text eng active">Donate</span>
+								<span class="lang-text span">Donar</span>
+							</a>
+
+							<div class="nav-dropdown__menu">
+								<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua">
+									<span class="lang-text eng active">Funds</span>
+									<span class="lang-text span">Fondos</span>
+								</a>
+								<a target="_blank" href="https://airtable.com/shr0fgKfWUXTYyzEm">
+									<span class="lang-text eng active">Item</span>
+									<span class="lang-text span">Artículo</span>
+								</a>
+							</div>
+						</div>
 					</li>
 				</ul>
 
