--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -396,6 +396,31 @@ nav {
 		}
 	}
 
+	.nav-dropdown {
+		position: relative;
+
+		.nav-dropdown__menu {
+			display: none;
+			background-color: #EFF5FA;
+			position: absolute;
+			padding: 10px;
+			border-radius: 1px;
+			width: 106px;
+
+			border-left: 3px solid black;
+			border-right: 3px solid black;
+			border-bottom: 3px solid black;
+
+			&.active {
+				display: block;
+			}
+
+			a:hover {
+				text-decoration: none !important;
+			}
+		}
+	}
+
 	.mobile-nav-footer {
 		@media only screen and (min-width: 577px) {
 			display: none;
@@ -855,6 +880,8 @@ nav {
 
 	.donate-container {
 		justify-content: space-evenly;
+		max-width: 1214px;
+    margin: 0 auto;
 	}
 
 	.donate {
@@ -878,6 +905,10 @@ nav {
 			span {
 				color: $bam-orange;
 			}
+		}
+
+		&.donate-funds {
+			margin-right: 40px;
 		}
 	}
 
