changing donate item link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@ layout: default
 									<span class="lang-text eng active">Funds</span>
 									<span class="lang-text span">Fondos</span>
 								</a>
-								<a target="_blank" href="https://airtable.com/shr0fgKfWUXTYyzEm">
+								<a target="_blank" href="https://bit.ly/big-bam-donation">
 									<span class="lang-text eng active">Item</span>
 									<span class="lang-text span">Artículo</span>
 								</a>
@@ -58,7 +58,7 @@ layout: default
 						</a>
 					</li>
 					<li class="nav-item mobile">
-						<a target="_blank" href="https://airtable.com/shr0fgKfWUXTYyzEm" class="nav-link">
+						<a target="_blank" href="https://bit.ly/big-bam-donation" class="nav-link">
 							<span class="lang-text eng active">Donate Item</span>
 							<span class="lang-text span">Donar Artículo</span>
 						</a>
