--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,9 +88,11 @@ layout: default
 			<div class="circle blue"></div>
 			<div class="circle orange"></div>
 		</div>
-
-		{{content}}
+		<div class="content-container">
+			{{content}}
+		</div>
 	</div>
+	{% include footer.html %}
 	{% include scripts.html %}
 </body>
 
