--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -967,7 +967,8 @@ nav {
 			opacity: .7;
 			font-family: "grifter-bold";
 			font-size: 18px;
-
+			padding-left: 5px;
+			padding-right: 5px;
 			@media only screen and (min-width: 577px) {
 				font-size: 16px;
 			}
@@ -980,8 +981,14 @@ nav {
 				text-decoration: underline;
 			}
 
-			&:hover {
+			&.no-underline:hover {
+				color: white;
 				cursor: pointer;
+			}
+			
+
+			& > a:hover {
+				
 				color: $bam-orange;
 			}
 
@@ -1001,7 +1008,7 @@ nav {
 
 
 /*****
- * Footer
+ * About
 ******/
 #about {
 	margin-top:100px;
@@ -1204,5 +1211,15 @@ nav {
 		&:hover {
 			cursor: pointer;
 		}
+	}
+}
+
+/*****
+ * policy pages
+******/
+.policy-container {
+	margin: 25px;
+	h1 {
+		text-align: center;
 	}
 }
