update volunteer link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@ layout: default
 						</a>
 					</li>
 					<li class="nav-item">
-						<a target="_blank" href="https://bit.ly/BAM-sign-up" class="nav-link">
+						<a target="_blank" href="https://app.miniextensions.com/form/0oO8aCDBmvgHkxlnfPTD" class="nav-link">
 							<span class="lang-text eng active">Volunteer</span>
 							<span class="lang-text span">Voluntariado</span>
 						</a>
