add volunteer and donate-item form to our site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
                         Donar Fondos
                     </span>
                 </a>
-                <a target="_blank" href="https://bit.ly/big-bam-donation" class="donate">
+                <a href="/donate-item/" class="donate">
                     <span class="lang-text eng active">
                         Donate Item
                     </span>
@@ -49,8 +49,8 @@
 
             <div class="d-flex flex-column flex-lg-row align-items-center links-container order-2 order-lg-1">
                 <div class="footer-link no-underline">2021 BAM. All Rights Reserved</div>
-                <div class="footer-link"><a href="/privacy.html">Privacy and Security Policy </a></div>
-                <div class="footer-link"><a href="/safety.html">Safety Guidelines</a></div>
+                <div class="footer-link"><a href="/privacy/">Privacy and Security Policy </a></div>
+                <div class="footer-link"><a href="/safety/">Safety Guidelines</a></div>
             </div>
         </div>
     </div>
