--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-	<link rel="icon" href="assets/favicons/favicon.svg">
+	<link rel="icon" href="/assets/favicons/favicon.svg">
 <!-- 	<link rel="apple-touch-icon" sizes="180x180"
 		href="{{'/assets/favicons/apple-touch-icon.png' | prepend: site.baseurl}}">
 	<link rel="icon" type="image/png" sizes="32x32"
