--- a/_includes/help.html
+++ b/_includes/help.html
@@ -20,7 +20,7 @@
 		<a href="https://bit.ly/BAMrequest" class="btn">Request Help</a>
 	</div>
 	<div>
-		<a href="https://app.miniextensions.com/form/0oO8aCDBmvgHkxlnfPTD" class="btn">Volunteer</a>
+		<a href="/volunteer/" class="btn">Volunteer</a>
 	</div>
 	<div>
 		<a href="https://opencollective.com/bushwick-ayuda-mutua" class="btn">Donate</a></div>
