--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,12 @@ layout: default
 	<main id="content">
 		<nav class="navbar navbar-expand-lg sticky-top">
 			<a href="/" id="logo_container">
-				<img id="logo_main" class="nav-logo active" src="assets/images/BAM.svg">
-				<img id="logo_hands" class="nav-logo hands" src="assets/images/logo_hands.svg">
+				<img id="logo_main" class="nav-logo active" src="/assets/images/BAM.svg">
+				<img id="logo_hands" class="nav-logo hands" src="/assets/images/logo_hands.svg">
 			</a>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav m-auto">
-					<img class="close-btn" src="./assets/images/close.svg" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<img class="close-btn" src="/assets/images/close.svg" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<li class="nav-item active">
 						<a class="nav-link" href="/about">
 							<span class="lang-text eng active">About</span>
@@ -21,7 +21,7 @@ layout: default
 						</a>
 					</li>
 					<li class="nav-item">
-						<a target="_blank" href="https://bit.ly/BAM-sign-up" class="nav-link">
+						<a href="/volunteer/" class="nav-link">
 							<span class="lang-text eng active">Volunteer</span>
 							<span class="lang-text span">Voluntariado</span>
 						</a>
@@ -44,7 +44,7 @@ layout: default
 									<span class="lang-text eng active">Funds</span>
 									<span class="lang-text span">Fondos</span>
 								</a>
-								<a target="_blank" href="https://bit.ly/big-bam-donation">
+								<a href="/donate-item/">
 									<span class="lang-text eng active">Item</span>
 									<span class="lang-text span">Artículo</span>
 								</a>
@@ -58,7 +58,7 @@ layout: default
 						</a>
 					</li>
 					<li class="nav-item mobile">
-						<a target="_blank" href="https://bit.ly/big-bam-donation" class="nav-link">
+						<a href="/donate-item/" class="nav-link">
 							<span class="lang-text eng active">Donate Item</span>
 							<span class="lang-text span">Donar Artículo</span>
 						</a>
