--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,12 @@ layout: default
 							<span class="lang-text span">Solicite Asistencia</span>
 						</a>
 					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="/calendar">
+							<span class="lang-text eng active">Calendar</span>
+							<span class="lang-text span">Calendario</span>
+						</a>
+					</li>
 					<li class="nav-item donate">
 						<div class="nav-dropdown">
 							<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="nav-link" id="donate_btn">
