--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1318,3 +1318,24 @@ nav {
 		}
 	}
 }
+
+
+/*****
+ * IFrame Container
+ *****/
+
+
+.iframe-container {
+    position: relative;
+    padding-left: 5%;
+    padding-top: 0;
+    height: 0;
+}
+
+.iframe-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
