points of unity added—styling incomplete

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,12 @@ layout: default
 							</div>
 						</div>
 					</li>
+					<li class="nav-item">
+						<a href="/points-of-unity/" class="nav-link">
+							<span class="lang-text eng active">Points of Unity</span>
+							<span class="lang-text span">Puntos de Unidad</span>
+						</a>
+					</li>
 					<li class="nav-item mobile">
 						<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="nav-link">
 							<span class="lang-text eng active">Donate Funds</span>
