--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,7 +49,8 @@
 
             <div class="d-flex flex-column flex-lg-row align-items-center links-container order-2 order-lg-1">
                 <div class="footer-link no-underline">2023 BAM. All Rights Reserved</div>
-                <div class="footer-link"><a href="/privacy/">Privacy and Security Policy </a></div>
+                <div class="footer-link"><a href="/onboarding">Onboarding Kit</a></div>
+                <div class="footer-link"><a href="/privacy/">Privacy and Security Policy</a></div>
                 <div class="footer-link"><a href="/safety/">Safety Guidelines</a></div>
             </div>
         </div>
