--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -40,6 +40,20 @@ $bam-orange: #FF6E2E;
 	display: block !important;
 }
 
+@media screen and (min-width: 900px) {
+	.carousel-inner {
+		height: 75%;
+		margin-top: 3rem;
+	}
+}
+
+@media screen and (max-width: 365px) {
+	.carousel-inner {
+	margin-top: 5rem;
+	}
+}
+
+
 //Carousel indicator dots
 .owl-theme .owl-dots .owl-dot span {
 	width: 18px !important;
@@ -707,8 +721,12 @@ nav {
 }
 
 .requests {
-	margin-top: 165px;
+	margin-top: 7rem;
 	position: relative;
+
+	@media only screen and (max-width: 576px) {
+		margin-top: 3rem;
+	}
 
 	#hands_mobile {
 		margin-left:100px;
