--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,10 +48,44 @@
             </div>
 
             <div class="d-flex flex-column flex-lg-row align-items-center links-container order-2 order-lg-1">
-                <div class="footer-link no-underline">2023 BAM. All Rights Reserved</div>
-                <div class="footer-link"><a href="/onboarding">Onboarding Kit</a></div>
-                <div class="footer-link"><a href="/privacy/">Privacy and Security Policy</a></div>
-                <div class="footer-link"><a href="/safety/">Safety Guidelines</a></div>
+                <div class="footer-link no-underline">
+                    <span class="lang-text eng active">
+                        2023 BAM. All Rights Reserved
+                    </span>
+                    <span class="lang-text span">
+                        2023 BAM. Reservados todos los derechos
+                    </span>
+                </div>
+                <div class="footer-link">
+                    <a href="/onboarding">
+                        <span class="lang-text eng active">
+                            Onboarding Kit
+                        </span>
+                        <span class="lang-text span">
+                            Kit de incorporación
+                        </span>
+                    </a>
+                </div>
+                <div class="footer-link">
+                    <a href="/privacy/">
+                        <span class="lang-text eng active">
+                            Privacy and Security Policy
+                        </span>
+                        <span class="lang-text span">
+                            Política de privacidad y seguridad
+                        </span>
+                    </a>
+                </div>
+                <div class="footer-link">
+                    <a href="/safety/">
+                        <span class="lang-text eng active">
+                            Safety Guidelines
+                        </span>
+                        <span class="lang-text span">
+                            Reglas de seguridad
+                        </span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
