change request link in nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@ layout: default
 						</a>
 					</li>
 					<li class="nav-item">
-						<a target="_blank" href="https://bit.ly/BAMrequest" class="nav-link" id="assistance_btn">
+						<a target="_blank" href="/request" class="nav-link" id="assistance_btn">
 							<span class="lang-text eng active">Request Assistance</span>
 							<span class="lang-text span">Solicite Asistencia</span>
 						</a>
