change request links

--- a/_includes/help.html
+++ b/_includes/help.html
@@ -17,7 +17,7 @@
 </div>
 <div class="grid">
 	<div>
-		<a href="https://bit.ly/BAMrequest" class="btn">Request Help</a>
+		<a href="/request/" class="btn">Request Help</a>
 	</div>
 	<div>
 		<a href="/volunteer/" class="btn">Volunteer</a>
