--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -11,6 +11,7 @@ $bam-orange: #FF6E2E;
 
 .owl-next,
 .owl-prev {
+
 	&:active,
 	&:focus {
 		outline: none !important;
@@ -49,7 +50,7 @@ $bam-orange: #FF6E2E;
 
 @media screen and (max-width: 365px) {
 	.carousel-inner {
-	margin-top: 5rem;
+		margin-top: 5rem;
 	}
 }
 
@@ -61,9 +62,12 @@ $bam-orange: #FF6E2E;
 	background: transparent !important;
 	border: 5px solid black !important;
 }
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
 	background: #000 !important;
 }
+
 .owl-carousel .owl-stage {
 	display: flex;
 	align-items: center;
@@ -85,7 +89,7 @@ $bam-orange: #FF6E2E;
 	a {
 		color: black;
 		display: flex;
-		
+
 		span {
 			margin-right: 10px;
 		}
@@ -113,7 +117,7 @@ $bam-orange: #FF6E2E;
 		height: 28px;
 	}
 
-	
+
 }
 
 .lang-text {
@@ -126,11 +130,13 @@ $bam-orange: #FF6E2E;
 
 .logo svg {
 	transition: all $delay ease-out;
+
 	@media (min-width: $breakpoint) {
 		width: 100%;
 	}
+
 	@media (max-width: $breakpoint) {
-		width: $logo;	
+		width: $logo;
 		height: $logo;
 
 	}
@@ -140,12 +146,14 @@ $bam-orange: #FF6E2E;
 
 .logo {
 	transition: all $delay ease-out;
+
 	&:hover svg {
-		
+
 		transform: rotate(-10deg);
 	}
 
 	display: block;
+
 	@media (max-width: $breakpoint) {
 		text-align: center;
 		padding-top: $gap;
@@ -155,19 +163,29 @@ $bam-orange: #FF6E2E;
 }
 
 @keyframes moveBlue {
-	from {left: 42%;}
-	to {left: 3%;}
+	from {
+		left: 42%;
+	}
+
+	to {
+		left: 3%;
+	}
 }
 
 @keyframes moveOrange {
-	from {left: 62%;}
-	to {left: 25%;}
+	from {
+		left: 62%;
+	}
+
+	to {
+		left: 25%;
+	}
 }
 
 .parallax-bg {
 	min-height: 100vh;
 	position: fixed;
-    height: 100vh;
+	height: 100vh;
 	width: 100%;
 	z-index: -1;
 
@@ -183,9 +201,9 @@ $bam-orange: #FF6E2E;
 
 		@media only screen and (min-width: 1024px) {
 			width: 600px;
-    		height: 600px;
+			height: 600px;
 		}
-		
+
 		-moz-border-radius: 50%;
 		border-radius: 50%;
 		opacity: 0.4;
@@ -195,7 +213,7 @@ $bam-orange: #FF6E2E;
 
 		filter: blur(45px);
 		-webkit-filter: blur(45px);
-		  
+
 		transform: skew(70deg, 78deg);
 
 		// transform: skew(25deg, -25deg);
@@ -204,16 +222,19 @@ $bam-orange: #FF6E2E;
 
 		&.orange {
 			left: 40%;
-			@media only screen and (min-width: 1024px) {	
-				left:60%;
+
+			@media only screen and (min-width: 1024px) {
+				left: 60%;
 			}
+
 			background-color: $bam-orange;
 		}
 
 		&.blue {
-			@media only screen and (min-width: 1024px) {	
+			@media only screen and (min-width: 1024px) {
 				left: 16%;
 			}
+
 			background-color: #6aa5d2;
 		}
 	}
@@ -250,7 +271,7 @@ nav {
 
 	height: 114px;
 	transition: .5s height;
-	
+
 	&.scrolled {
 		height: 64px;
 	}
@@ -287,7 +308,7 @@ nav {
 		&.scrolled {
 			height: 52px;
 		}
-		
+
 		// transition: height .5s;
 
 		@media only screen and (max-width: 576px) {
@@ -303,11 +324,14 @@ nav {
 	a {
 		&:hover {
 			cursor: pointer;
-		};
+		}
+
+		;
 	}
 
 	ul {
 		width: 58%;
+
 		@media only screen and (min-width: 577px) {
 			justify-content: space-between;
 		}
@@ -366,7 +390,7 @@ nav {
 			justify-content: space-between;
 		}
 	}
-	
+
 	.eng-span-container {
 		@media only screen and (max-width: 576px) {
 			margin-right: 30px;
@@ -387,7 +411,7 @@ nav {
 			border-radius: 50%;
 			opacity: .2;
 			display: flex;
-    		align-items: center;
+			align-items: center;
 
 			&:first-child {
 				margin-right: 5px;
@@ -462,6 +486,7 @@ nav {
 		margin-bottom: 65px;
 	}
 }
+
 #header_pane {
 	@media only screen and (min-width: 375px) {
 		background-image: url("/assets/images/bam-tag.svg");
@@ -490,18 +515,24 @@ nav {
 
 	.title {
 		font-family: "grifter-bold";
-		font-size: 68px;
-		line-height: 82px;
+		font-size: 52px;
+		line-height: 76px;
 
-		@media only screen and (min-width: 1024px) {
-			font-size: 140px;
-			line-height: 140px;
+		@media only screen and (min-width: 712px) {
+			font-size: 68px;
+			line-height: 82px;
 		}
 
 		@media only screen and (min-width: 1024px) {
 			font-size: 140px;
 			line-height: 140px;
 		}
+
+		@media only screen and (min-width: 1024px) {
+			font-size: 140px;
+			line-height: 140px;
+		}
+
 	}
 
 	.subtitle {
@@ -524,7 +555,8 @@ nav {
 		}
 	}
 
-	.learn-more, .calendar {
+	.learn-more,
+	.calendar {
 		font-size: 20px;
 		text-transform: uppercase;
 	}
@@ -553,7 +585,7 @@ nav {
 			padding: 0 .5rem;
 			font-size: 60px;
 			text-transform: uppercase;
-			font-family: "grifter-bold";  
+			font-family: "grifter-bold";
 
 		}
 
@@ -566,6 +598,7 @@ nav {
 	background-repeat: no-repeat;
 	background-position: 97% 98%;
 	height: 400px;
+
 	@media only screen and (max-width: 560px) {
 		background-size: 145px;
 		background-position: 97% 0%;
@@ -579,13 +612,13 @@ nav {
 ******/
 .carousel-container {
 	max-width: 95%;
-    margin-right: auto;
+	margin-right: auto;
 	margin-left: auto;
 	margin-top: 8em;
 
 	display: flex;
-    align-items: center;
-    justify-content: center;
+	align-items: center;
+	justify-content: center;
 }
 
 #pics_carousel {
@@ -604,14 +637,14 @@ nav {
 		top: 9px;
 		display: block !important;
 	}
-	
+
 	.owl-next {
 		position: absolute;
 		top: 9px;
 		right: 0px;
 		display: block !important;
 	}
-	
+
 	.item {
 		min-height: 1px;
 	}
@@ -658,6 +691,7 @@ nav {
 .t-carousel-container {
 	margin-top: 50px;
 }
+
 #testimony_carousel {
 	.item {
 		max-width: 765px;
@@ -698,7 +732,7 @@ nav {
 	// width: 1110px;
 	color: #000000;
 	font-family: "grifter-bold";
-	
+
 	font-weight: bold;
 	letter-spacing: -0.35px;
 
@@ -709,7 +743,7 @@ nav {
 		font-size: 60px;
 		line-height: 80px;
 	}
-	
+
 
 	&.network {
 		padding-top: 2em;
@@ -729,8 +763,8 @@ nav {
 	}
 
 	#hands_mobile {
-		margin-left:100px;
-		
+		margin-left: 100px;
+
 		@media only screen and (min-width: 576px) {
 			display: none;
 		}
@@ -745,6 +779,7 @@ nav {
 		}
 	}
 }
+
 .request {
 	display: flex;
 	justify-content: center;
@@ -785,23 +820,24 @@ nav {
 		@media only screen and (min-width: 1024px) {
 			margin-top: 0;
 		}
+
 		.logo {
 			// left: 163px;
 			left: 412px;
 			top: -123px;
-			
+
 			@media only screen and (min-width: 557px) {
 				top: 272px;
 			}
-			
+
 			@media only screen and (min-width: 1024px) {
 				left: 37px;
-    			top: 74px;
+				top: 74px;
 			}
 		}
 	}
-	
-	
+
+
 
 	.text-container {
 		@media only screen and (min-width: 1024px) {
@@ -817,11 +853,11 @@ nav {
 		@media only screen and (min-width: 1024px) {
 			font-size: 60px;
 		}
-		
+
 		.underline {
 			border-bottom: 8px solid $bam-orange;
 		}
-		
+
 		a {
 			color: #212529;
 			text-decoration: none;
@@ -859,7 +895,7 @@ nav {
 	@media only screen and (min-width: 1024px) {
 		margin-top: 165px;
 	}
-	
+
 	padding-top: 77px;
 
 	@media only screen and (max-width: 577px) {
@@ -910,7 +946,7 @@ nav {
 	.donate-container {
 		justify-content: space-evenly;
 		max-width: 1214px;
-    margin: 0 auto;
+		margin: 0 auto;
 	}
 
 	.donate {
@@ -949,7 +985,7 @@ nav {
 		border-top: 1px solid white;
 
 		.links-container {
-			text-align: center; 
+			text-align: center;
 
 			.link:not(:last-child) {
 				margin-right: 50px;
@@ -980,12 +1016,14 @@ nav {
 				}
 			}
 		}
+
 		.footer-link {
 			opacity: .7;
 			font-family: "grifter-bold";
 			font-size: 18px;
 			padding-left: 5px;
 			padding-right: 5px;
+
 			@media only screen and (min-width: 577px) {
 				font-size: 16px;
 			}
@@ -1002,10 +1040,10 @@ nav {
 				color: white;
 				cursor: pointer;
 			}
-			
 
-			& > a:hover {
-				
+
+			&>a:hover {
+
 				color: $bam-orange;
 			}
 
@@ -1016,7 +1054,7 @@ nav {
 			}
 		}
 	}
-  
+
 	.logo-container {
 		text-align: center;
 	}
@@ -1028,14 +1066,16 @@ nav {
  * About
 ******/
 #about {
-	margin-top:100px;
+	margin-top: 100px;
 
 	@media only screen and (min-width: 1500px) {
 		max-width: 1440px;
 	}
+
 	@media only screen and (max-width: 1499px) {
 		max-width: 1250px;
 	}
+
 	@media only screen and (max-width: 1025px) {
 		max-width: 1000px;
 	}
@@ -1050,6 +1090,7 @@ nav {
 			margin-right: auto;
 			margin-left: auto;
 		}
+
 		.row {
 			@media only screen and (min-width: 577px) {
 				justify-content: space-evenly;
@@ -1087,7 +1128,7 @@ nav {
 			}
 		}
 	}
-	
+
 	.content-container {
 		position: relative;
 
@@ -1154,13 +1195,14 @@ nav {
 		}
 	}
 }
+
 .drop-section {
 	border-bottom: 3px solid black;
 
 	@media only screen and (min-width: 1024px) {
 		border-bottom: 5px solid black;
 	}
-	
+
 	&:first-child {
 		border-top: 3px solid black;
 
@@ -1199,7 +1241,7 @@ nav {
 		width: 100%;
 		justify-content: space-between;
 		align-items: center;
-		
+
 		img {
 			&:hover {
 				cursor: pointer;
@@ -1236,6 +1278,7 @@ nav {
 ******/
 .policy-container {
 	margin: 25px;
+
 	h1 {
 		text-align: center;
 	}
@@ -1246,12 +1289,13 @@ nav {
 ******/
 
 .mini-extensions-form {
-	background:url(/assets/images/loading.gif) center top no-repeat;
-    position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    height: 1000px;
+	background: url(/assets/images/loading.gif) center top no-repeat;
+	position: relative;
+	overflow: hidden;
+	padding-top: 56.25%;
+	height: 1000px;
 	z-index: 1;
+
 	iframe {
 		z-index: 0;
 		position: absolute;
@@ -1267,35 +1311,36 @@ nav {
 /*****
  * Request Counter
  *****/
- .request-counter {
-	
-	h2, h3 {
-		font-family: "grifter-bold";
- 	}
+.request-counter {
 
-	 @media only screen and (max-width: 600px) {
+	h2,
+	h3 {
+		font-family: "grifter-bold";
+	}
+
+	@media only screen and (max-width: 600px) {
 		h2 {
 			font-size: 24px;
 		}
 	}
- }
+}
 
- .request-cta-container {
+.request-cta-container {
 	margin-bottom: 15px;
- }
+}
 
- .request-cta {
+.request-cta {
 	font-family: "grifter-bold";
 	text-transform: uppercase;
- }
+}
 
- .request-count {
+.request-count {
 	font-family: "grifter-bold";
 	display: inline;
 	font-size: 48px;
- }
+}
 
- .request-row {
+.request-row {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -1303,20 +1348,21 @@ nav {
 	padding-top: 15px;
 
 	@media only screen and (max-width: 600px) {
-		  flex-direction:column;
-	  }
- }
+		flex-direction: column;
+	}
+}
 
- .request-column {
+.request-column {
 	display: flex;
-  	flex-direction: column;
-  	flex-basis: 100%;
-  	flex: 1;
- }
+	flex-direction: column;
+	flex-basis: 100%;
+	flex: 1;
+}
 
- .request-entry {
+.request-entry {
 	& h2 {
 		display: inline !important;
+
 		@media only screen and (max-width: 600px) {
 			font-size: 30px;
 		}
@@ -1343,14 +1389,14 @@ nav {
 
 
 .iframe-container {
-    position: relative;
-    height: 100%;
+	position: relative;
+	height: 100%;
 }
 
 .iframe-container iframe {
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
