--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1400,3 +1400,31 @@ nav {
 	width: 100%;
 	height: 100%;
 }
+
+.links-list {
+	display: flex;
+	flex-direction: column;
+}
+
+.links-list-item {
+	padding: 15px 25px;
+	margin: 10px;
+	font-size: 20px;
+	text-align: center;
+	cursor: pointer;
+	outline: none;
+	background-color: #FF6E2E;
+	color: white;
+	border: none;
+	border-radius: 15px;
+	text-decoration: none;
+}
+.links-list > a {
+	text-decoration: none;
+}
+
+.links-list-item:hover {
+	background-color: #FF6E2E;
+	color: #AECEE6;
+	text-decoration: none;
+}
