fix(embeds) turn off footer to make scroll better

--- a/_layouts/embed.html
+++ b/_layouts/embed.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+include_footer: false
 ---
 
 <div class="iframe-container"> 
@@ -8,7 +9,7 @@ layout: default
 
 <style>
 #footer {
-    margin-top: 0px;
+    display: none !important;
 }
 
 #footer .pointing-img {
