add food pantry nav item

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,12 @@ layout: default
 							<span class="lang-text span">Donar Artículo</span>
 						</a>
 					</li>
+					<li class="nav-item">
+						<a href="/resources/food-pantries/" class="nav-link">
+							<span class="lang-text eng active">Pantries</span>
+							<span class="lang-text span">Despensas</span>
+						</a>
+					</li>
 				</ul>
 
 				<div class="mobile-nav-footer">
